--- a/GoShopAPI/GoShop.Core/GoShop.Core.csproj
+++ b/GoShopAPI/GoShop.Core/GoShop.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GoShop.Data\GoShop.Data.csproj" />
+  </ItemGroup>
+
 </Project>
