--- a/GoShopAPI/GoShopAPI/appsettings.json
+++ b/GoShopAPI/GoShopAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GoShopDatabase": "Server=PC\\SQLEXPRESS;Database=GoShopDatabase;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
