--- a/GoShopAPI/GoShopAPI/appsettings.json
+++ b/GoShopAPI/GoShopAPI/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "GoShopDatabase": "Server=PC\\SQLEXPRESS;Database=GoShopDatabase;Trusted_Connection=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GoShopDatabase": "Server=PC\\SQLEXPRESS;Database=GoShopDatabase;Integrated Security=true;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
