--- a/GoShopAPI/GoShop.Data/GoShop.Data.csproj
+++ b/GoShopAPI/GoShop.Data/GoShop.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\GoShop.Domain\GoShop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
