--- a/GoShopAPI/GoShopAPI/GoShop.API.csproj
+++ b/GoShopAPI/GoShopAPI/GoShop.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\GoShop.Core\GoShop.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
